svn path=/trunk/; revision=450

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -33,39 +33,39 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-add_subdirectory(ZECore)
-add_subdirectory(ZEDebug)
-add_subdirectory(ZEDS)
-add_subdirectory(ZEGame)
-add_subdirectory(ZEGraphics)
-add_subdirectory(ZEInput)
-add_subdirectory(ZEMap)
-add_subdirectory(ZEMath)
-add_subdirectory(ZEMeta)
-add_subdirectory(ZEModel)
-add_subdirectory(ZENetwork)
-add_subdirectory(ZEParticle)
-add_subdirectory(ZEPhysics)
-add_subdirectory(ZEScript)
-add_subdirectory(ZESound)
-add_subdirectory(ZEUI)
+add_subdirectory (ZECore)
+add_subdirectory (ZEDebug)
+add_subdirectory (ZEDS)
+add_subdirectory (ZEGame)
+add_subdirectory (ZEGraphics)
+add_subdirectory (ZEInput)
+add_subdirectory (ZEMap)
+add_subdirectory (ZEMath)
+add_subdirectory (ZEMeta)
+add_subdirectory (ZEModel)
+add_subdirectory (ZENetwork)
+add_subdirectory (ZEParticle)
+add_subdirectory (ZEPhysics)
+add_subdirectory (ZEScript)
+add_subdirectory (ZESound)
+add_subdirectory (ZEUI)
 
-add_source(ZEAPI.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECompileOptions.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDefinitions.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFastDelegate.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFastDelegateBind.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMain.cpp Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESDK.cpp Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESDK.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETypes.h Source_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source (ZEAPI.h 				Sources ZESDK)
+add_source (ZECompileOptions.h 		Sources ZESDK)
+add_source (ZEDefinitions.h 		Sources ZESDK)
+add_source (ZEFastDelegate.h 		Sources ZESDK)
+add_source (ZEFastDelegateBind.h	Sources ZESDK)
+add_source (ZEMain.cpp 				Sources)
+add_source (ZESDK.cpp 				Sources)
+add_source (ZESDK.h 				Sources ZESDK)
+add_source (ZETypes.h				Sources ZESDK)
 
-add_executable(ZE WIN32 ${Source_SOURCE_FILES})
-target_link_libraries(ZE ZECore ZEDebug ZEDS ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
-target_link_libraries(ZE ZEDirect3D9 ZEDirectInput ZEDirectSound ZEOpenAL ZEPhysX ZEDummyInput ZEVirtualInput ZEPortalMap)
+add_executable (ZE WIN32 ${Sources})
+target_link_libraries (ZE ZECore ZEDebug ZEDS ZEGame ZEGraphics ZEInput ZEMap ZEMath ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI)
+target_link_libraries (ZE ZEDirect3D9 ZEDirectInput ZEDirectSound ZEOpenAL ZEPhysX ZEDummyInput ZEVirtualInput ZEPortalMap)
 
-install(TARGETS ZE RUNTIME DESTINATION bin COMPONENT "Runtime")
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/Dll/ CONFIGURATIONS Release ARCHIVE DESTINATION bin COMPONENT "Runtime")
+install (TARGETS ZE RUNTIME DESTINATION bin COMPONENT "Runtime")
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include)
+install (DIRECTORY ${CMAKE_SOURCE_DIR}/Dll/ CONFIGURATIONS Release ARCHIVE DESTINATION bin COMPONENT "Runtime")
