--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -33,43 +33,43 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-add_source(ZECommand.cpp ZECore_SOURCE_FILES)
-add_source(ZECommand.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECommandManager.cpp ZECore_SOURCE_FILES)
-add_source(ZECommandManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECommandSection.cpp ZECore_SOURCE_FILES)
-add_source(ZECommandSection.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEConsole.cpp ZECore_SOURCE_FILES)
-add_source(ZEConsole.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEConsoleWindow.cpp ZECore_SOURCE_FILES)
-add_source(ZEConsoleWindow.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECore.cpp ZECore_SOURCE_FILES)
-add_source(ZECore.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEError.cpp ZECore_SOURCE_FILES)
-add_source(ZEError.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModule.cpp ZECore_SOURCE_FILES)
-add_source(ZEModule.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModuleManager.cpp ZECore_SOURCE_FILES)
-add_source(ZEModuleManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOption.cpp ZECore_SOURCE_FILES)
-add_source(ZEOption.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOptionManager.cpp ZECore_SOURCE_FILES)
-add_source(ZEOptionManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOptionSection.cpp ZECore_SOURCE_FILES)
-add_source(ZEOptionSection.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEResource.cpp ZECore_SOURCE_FILES)
-add_source(ZEResource.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEResourceFile.cpp ZECore_SOURCE_FILES)
-add_source(ZEResourceFile.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEResourceManager.cpp ZECore_SOURCE_FILES)
-add_source(ZEResourceManager.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEWindow.cpp ZECore_SOURCE_FILES)
-add_source(ZEWindow.h ZECore_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEWindowResource.h ZECore_SOURCE_FILES)
+add_source (ZECommand.cpp				Sources)
+add_source (ZECommand.h					Sources ZESDK)
+add_source (ZECommandManager.cpp		Sources)
+add_source (ZECommandManager.h			Sources ZESDK)
+add_source (ZECommandSection.cpp		Sources)
+add_source (ZECommandSection.h			Sources ZESDK)
+add_source (ZEConsole.cpp				Sources)
+add_source (ZEConsole.h					Sources ZESDK)
+add_source (ZEConsoleWindow.cpp			Sources)
+add_source (ZEConsoleWindow.h			Sources ZESDK)
+add_source (ZECore.cpp					Sources)
+add_source (ZECore.h					Sources ZESDK)
+add_source (ZEError.cpp					Sources)
+add_source (ZEError.h					Sources ZESDK)
+add_source (ZEModule.cpp				Sources)
+add_source (ZEModule.h					Sources ZESDK)
+add_source (ZEModuleManager.cpp			Sources)
+add_source (ZEModuleManager.h			Sources ZESDK)
+add_source (ZEOption.cpp				Sources)
+add_source (ZEOption.h					Sources ZESDK)
+add_source (ZEOptionManager.cpp			Sources)
+add_source (ZEOptionManager.h			Sources ZESDK)
+add_source (ZEOptionSection.cpp			Sources)
+add_source (ZEOptionSection.h			Sources ZESDK)
+add_source (ZEResource.cpp				Sources)
+add_source (ZEResource.h				Sources ZESDK)
+add_source (ZEResourceFile.cpp			Sources)
+add_source (ZEResourceFile.h			Sources ZESDK)
+add_source (ZEResourceManager.cpp		Sources)
+add_source (ZEResourceManager.h			Sources ZESDK)
+add_source (ZEWindow.cpp				Sources)
+add_source (ZEWindow.h					Sources ZESDK)
+add_source (ZEWindowResource.h			Sources)
 
-add_library(ZECore ${ZECore_SOURCE_FILES})
+add_library (ZECore ${Sources})
 
-install(TARGETS ZECore COMPONENT "Libraries" CONFIGURATIONS Release ARCHIVE DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES} COMPONENT "Includes" DESTINATION Includes/ZECore)
+install (TARGETS ZECore COMPONENT "Libraries" CONFIGURATIONS Release ARCHIVE DESTINATION Lib)
+install (FILES ${ZESDK} COMPONENT "Includes" DESTINATION Include/ZECore)
