--- a/Source/ZEDS/CMakeLists.txt
+++ b/Source/ZEDS/CMakeLists.txt
@@ -33,27 +33,26 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEAllocator.cpp			Sources)
+add_source (ZEAllocator.h			Sources ZESDK)
+add_source (ZEArray.cpp				Sources)
+add_source (ZEArray.h				Sources ZESDK)
+add_source (ZEDSDefinitions.cpp		Sources)
+add_source (ZEDSDefinitions.h		Sources ZESDK)
+add_source (ZEFileCache.cpp			Sources)
+add_source (ZEFileCache.h			Sources ZESDK)
+add_source (ZENamed.cpp				Sources)
+add_source (ZENamed.h				Sources ZESDK)
+add_source (ZEString.cpp			Sources)
+add_source (ZEString.h				Sources ZESDK)
+add_source (ZETypedVariant.cpp		Sources)
+add_source (ZETypedVariant.h		Sources ZESDK)
+add_source (ZEVariant.cpp			Sources)
+add_source (ZEVariant.h				Sources ZESDK)
 
-add_source(ZEAllocator.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEAllocator.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEArray.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEArray.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSDefinitions.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSDefinitions.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFileCache.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFileCache.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZENamed.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZENamed.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEString.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEString.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETypedVariant.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETypedVariant.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVariant.cpp ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVariant.h ZEDS_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_library (ZEDS ${Sources})
 
-add_library(ZEDS ${ZEDS_SOURCE_FILES})
-
-install(TARGETS ZEDS COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEDS)
+install (TARGETS ZEDS COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEDS)
