--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -33,52 +33,46 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZECanvasBrush.cpp		Sources)
+add_source (ZECanvasBrush.h			Sources ZESDK)
+add_source (ZECharacter.cpp			Sources)
+add_source (ZECharacter.h			Sources ZESDK)
+add_source (ZEComponent.cpp			Sources)
+add_source (ZEComponent.h			Sources ZESDK)
+add_source (ZECompoundEntity.cpp	Sources)
+add_source (ZECompoundEntity.h		Sources ZESDK)
+add_source (ZEDrawParameters.cpp	Sources)
+add_source (ZEDrawParameters.h		Sources ZESDK)
+add_source (ZEEntity.cpp			Sources)
+add_source (ZEEntity.h				Sources ZESDK)
+add_source (ZEEntityProvider.cpp	Sources)
+add_source (ZEEntityProvider.h		Sources ZESDK)
+add_source (ZEGame.cpp				Sources)
+add_source (ZEGame.h				Sources ZESDK)
+add_source (ZEGameProvider.cpp		Sources)
+add_source (ZEGameProvider.h		Sources ZESDK)
+add_source (ZEGrid.cpp				Sources)
+add_source (ZEGrid.h				Sources	ZESDK)
+add_source (ZEPlayer.cpp			Sources)
+add_source (ZEPlayer.h				Sources ZESDK)
+add_source (ZEPortal.cpp			Sources)
+add_source (ZEPortal.h				Sources ZESDK)
+add_source (ZEPresentationSlide.cpp	Sources)
+add_source (ZEPresentationSlide.h	Sources ZESDK)
+add_source (ZEScene.cpp				Sources)
+add_source (ZEScene.h				Sources ZESDK)
+add_source (ZESceneDebugDraw.cpp	Sources)
+add_source (ZESceneDebugDraw.h		Sources ZESDK)
+add_source (ZESerialization.cpp		Sources)
+add_source (ZESerialization.h		Sources ZESDK)
+add_source (ZESkyBrush.cpp			Sources)
+add_source (ZESkyBrush.h			Sources ZESDK)
+add_source (ZETrigger.cpp			Sources)
+add_source (ZETrigger.h				Sources ZESDK)
 
-add_source(ZECanvasBrush.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECanvasBrush.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECharacter.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECharacter.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEComponent.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEComponent.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECompoundEntity.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECompoundEntity.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDrawParameters.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDrawParameters.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEEntity.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEEntity.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEEntityProvider.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEEntityProvider.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGame.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGame.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGameManager.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGameProvider.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGameProvider.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGrid.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGrid.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPlayer.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPlayer.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortal.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortal.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPresentationSlide.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPresentationSlide.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEScene.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEScene.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESceneDebugDraw.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESceneDebugDraw.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESerialization.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESerialization.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESkyBrush.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESkyBrush.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundBrush2D.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundBrush2D.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundBrush3D.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundBrush3D.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETrigger.cpp ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETrigger.h ZEGame_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_library (ZEGame ${Sources})
 
-add_library(ZEGame ${ZEGame_SOURCE_FILES})
-
-install(TARGETS ZEGame COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEGame)
+install (TARGETS ZEGame COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEGame)
