--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -38,77 +38,77 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(ZEDirect3D9)
 add_subdirectory(ZEPostProcessor)
 
-add_source(ZEBitmap.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEBitmap.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECamera.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECamera.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECanvas.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZECanvas.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDirectionalLight.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDirectionalLight.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFixedMaterial.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFixedMaterial.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFrameRenderer.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFrameRenderer.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGraphicsModule.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEGraphicsModule.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEIndexedPolygon.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZELight.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZELight.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMaterial.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMaterial.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMaterialComponents.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMaterialFileFormat.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMaterialResource.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMaterialResource.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOmniProjectiveLight.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOmniProjectiveLight.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPointLight.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPointLight.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEProjectiveLight.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEProjectiveLight.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERenderer.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERenderer.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERenderOrder.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERenderOrder.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEShadowRenderer.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEShadowRenderer.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESimpleMaterial.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESimpleMaterial.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESkyBoxMaterial.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESkyBoxMaterial.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture2D.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture2D.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture2DResource.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture2DResource.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture3D.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture3D.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture3DResource.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETexture3DResource.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETextureCube.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETextureCube.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETextureCubeResource.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETextureCubeResource.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETextureResource.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETextureResource.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIMaterial.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIMaterial.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVertexBuffer.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVertexBuffer.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVertexDeclaration.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVertexDeclaration.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVertexTypes.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVertexTypes.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEViewPort.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEViewPort.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEViewVolume.cpp ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEViewVolume.h ZEGraphics_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source (ZEBitmap.cpp					Sources)
+add_source (ZEBitmap.h						Sources ZESDK)
+add_source (ZECamera.cpp					Sources)
+add_source (ZECamera.h						Sources ZESDK)
+add_source (ZECanvas.cpp					Sources)
+add_source (ZECanvas.h 						Sources ZESDK)
+add_source (ZEDirectionalLight.cpp 			Sources)
+add_source (ZEDirectionalLight.h 			Sources ZESDK)
+add_source (ZEFixedMaterial.cpp 			Sources)
+add_source (ZEFixedMaterial.h 				Sources ZESDK)
+add_source (ZEFrameRenderer.cpp 			Sources)
+add_source (ZEFrameRenderer.h 				Sources ZESDK)
+add_source (ZEGraphicsModule.cpp 			Sources)
+add_source (ZEGraphicsModule.h 				Sources ZESDK)
+add_source (ZEIndexedPolygon.h 				Sources ZESDK)
+add_source (ZELight.cpp 					Sources)
+add_source (ZELight.h 						Sources ZESDK)
+add_source (ZEMaterial.cpp 					Sources)
+add_source (ZEMaterial.h 					Sources ZESDK)
+add_source (ZEMaterialComponents.h 			Sources ZESDK)
+add_source (ZEMaterialFileFormat.h 			Sources)
+add_source (ZEMaterialResource.cpp 			Sources)
+add_source (ZEMaterialResource.h 			Sources ZESDK)
+add_source (ZEOmniProjectiveLight.cpp 		Sources)
+add_source (ZEOmniProjectiveLight.h 		Sources ZESDK)
+add_source (ZEPointLight.cpp 				Sources)
+add_source (ZEPointLight.h 					Sources ZESDK)
+add_source (ZEProjectiveLight.cpp 			Sources)
+add_source (ZEProjectiveLight.h 			Sources ZESDK)
+add_source (ZERenderer.cpp 					Sources)
+add_source (ZERenderer.h 					Sources ZESDK)
+add_source (ZERenderOrder.cpp 				Sources)
+add_source (ZERenderOrder.h 				Sources ZESDK)
+add_source (ZEShadowRenderer.cpp 			Sources)
+add_source (ZEShadowRenderer.h 				Sources ZESDK)
+add_source (ZESimpleMaterial.cpp 			Sources)
+add_source (ZESimpleMaterial.h 				Sources ZESDK)
+add_source (ZESkyBoxMaterial.cpp 			Sources)
+add_source (ZESkyBoxMaterial.h 				Sources ZESDK)
+add_source (ZETexture.cpp 					Sources)
+add_source (ZETexture.h 					Sources ZESDK)
+add_source (ZETexture2D.cpp 				Sources)
+add_source (ZETexture2D.h 					Sources ZESDK)
+add_source (ZETexture2DResource.cpp 		Sources)
+add_source (ZETexture2DResource.h 			Sources ZESDK)
+add_source (ZETexture3D.cpp 				Sources)
+add_source (ZETexture3D.h 					Sources ZESDK)
+add_source (ZETexture3DResource.cpp 		Sources)
+add_source (ZETexture3DResource.h 			Sources ZESDK)
+add_source (ZETextureCube.cpp 				Sources)
+add_source (ZETextureCube.h 				Sources ZESDK)
+add_source (ZETextureCubeResource.cpp 		Sources)
+add_source (ZETextureCubeResource.h 		Sources ZESDK)
+add_source (ZETextureResource.cpp 			Sources)
+add_source (ZETextureResource.h 			Sources ZESDK)
+add_source (ZEUIMaterial.cpp 				Sources)
+add_source (ZEUIMaterial.h 					Sources ZESDK)
+add_source (ZEVertexBuffer.cpp 				Sources)
+add_source (ZEVertexBuffer.h 				Sources ZESDK)
+add_source (ZEVertexDeclaration.cpp 		Sources)
+add_source (ZEVertexDeclaration.h 			Sources ZESDK)
+add_source (ZEVertexTypes.cpp 				Sources)
+add_source (ZEVertexTypes.h 				Sources ZESDK)
+add_source (ZEViewPort.cpp 					Sources)
+add_source (ZEViewPort.h 					Sources ZESDK)
+add_source (ZEViewVolume.cpp 				Sources)
+add_source (ZEViewVolume.h 					Sources ZESDK)
 
-add_definitions(-DFREEIMAGE_LIB)
-add_library(ZEGraphics ${ZEGraphics_SOURCE_FILES})
-target_link_libraries(ZEGraphics freeimage.lib)
+add_definitions (-DFREEIMAGE_LIB)
+add_library (ZEGraphics ${Sources})
+target_link_libraries (ZEGraphics freeimage.lib)
 
-install(TARGETS ZEGraphics COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEGraphics)
+install (TARGETS ZEGraphics COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEGraphics)
