--- a/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
@@ -33,30 +33,29 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEPostProcessor.cpp			Sources)
+add_source (ZEPostProcessor.h			Sources ZESDK)
+add_source (ZEPostProcessorNode.cpp		Sources)
+add_source (ZEPostProcessorNode.h		Sources ZESDK)
+add_source (ZEPPBlurNode.cpp			Sources)
+add_source (ZEPPBlurNode.h				Sources ZESDK)
+add_source (ZEPPColorInputNode.cpp		Sources)
+add_source (ZEPPColorInputNode.h		Sources ZESDK)
+add_source (ZEPPDepthInputNode.cpp		Sources)
+add_source (ZEPPDepthInputNode.h		Sources ZESDK)
+add_source (ZEPPFilter1DNode.cpp		Sources)
+add_source (ZEPPFilter1DNode.h			Sources ZESDK)
+add_source (ZEPPFilter2DNode.cpp		Sources)
+add_source (ZEPPFilter2DNode.h			Sources ZESDK)
+add_source (ZEPPScreenOutputNode.cpp	Sources)
+add_source (ZEPPScreenOutputNode.h		Sources ZESDK)
+add_source (ZEPPTextureInputNode.cpp	Sources)
+add_source (ZEPPTextureInputNode.h		Sources ZESDK)
+add_source (ZEPPTextureOutputNode.cpp	Sources)
+add_source (ZEPPTextureOutputNode.h		Sources ZESDK)
+add_source (ZEPPVelocityInputNode.cpp	Sources)
+add_source (ZEPPVelocityInputNode.h		Sources ZESDK)
 
-add_source(ZEPostProcessor.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPostProcessor.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPostProcessorNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPostProcessorNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPBlurNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPBlurNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPColorInputNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPColorInputNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPDepthInputNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPDepthInputNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPFilter1DNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPFilter1DNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPFilter2DNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPFilter2DNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPScreenOutputNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPScreenOutputNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPTextureInputNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPTextureInputNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPTextureOutputNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPTextureOutputNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPVelocityInputNode.cpp ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPPVelocityInputNode.h ZEPostProcessor_SOURCE_FILES INCLUDED_SDKS zesdk)
-
-add_library(ZEPostProcessor ${ZEPostProcessor_SOURCE_FILES})
+add_library (ZEPostProcessor ${Sources})
