--- a/Source/ZEMap/ZEPortalMap/CMakeLists.txt
+++ b/Source/ZEMap/ZEPortalMap/CMakeLists.txt
@@ -33,25 +33,24 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEPortalMap.cpp					Sources)
+add_source (ZEPortalMap.h					Sources ZESDK)
+add_source (ZEPortalMapDoor.cpp				Sources)
+add_source (ZEPortalMapDoor.h				Sources ZESDK)
+add_source (ZEPortalMapFileFormat.h			Sources)
+add_source (ZEPortalMapOctree.cpp			Sources)
+add_source (ZEPortalMapOctree.h				Sources ZESDK)
+add_source (ZEPortalMapPortal.cpp			Sources)
+add_source (ZEPortalMapPortal.h				Sources ZESDK)
+add_source (ZEPortalMapPortalDoor.h			Sources ZESDK)
+add_source (ZEPortalMapPortalOctree.cpp		Sources)
+add_source (ZEPortalMapPortalOctree.h		Sources ZESDK)
+add_source (ZEPortalMapResource.cpp			Sources)
+add_source (ZEPortalMapResource.h			Sources ZESDK)
 
-add_source(ZEPortalMap.cpp ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMap.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapDoor.cpp ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapDoor.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapFileFormat.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapOctree.cpp ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapOctree.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapPortal.cpp ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapPortal.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapPortalDoor.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapPortalOctree.cpp ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapPortalOctree.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapResource.cpp ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPortalMapResource.h ZEPortalMap_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_library (ZEPortalMap ${Sources})
 
-add_library(ZEPortalMap ${ZEPortalMap_SOURCE_FILES})
-
-install(TARGETS ZEPortalMap COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEMap/ZEPortalMap)
+install (TARGETS ZEPortalMap COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEMap/ZEPortalMap)
