--- a/Source/ZEMath/CMakeLists.txt
+++ b/Source/ZEMath/CMakeLists.txt
@@ -33,40 +33,40 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEAABoundingBox.cpp		Sources)
+add_source (ZEAABoundingBox.h		Sources ZESDK)
+add_source (ZEBoundingSphere.cpp	Sources)
+add_source (ZEBoundingSphere.h		Sources ZESDK)
+add_source (ZEMathDefinitions.cpp	Sources)
+add_source (ZEMathDefinitions.h		Sources ZESDK)
+add_source (ZELine.cpp				Sources)
+add_source (ZELine.h				Sources ZESDK)
+add_source (ZELineSegment.cpp		Sources)
+add_source (ZELineSegment.h			Sources ZESDK)
+add_source (ZEMatrix.cpp			Sources)
+add_source (ZEMatrix.h				Sources ZESDK)
+add_source (ZEOBoundingBox.cpp		Sources)
+add_source (ZEOBoundingBox.h		Sources ZESDK)
+add_source (ZEPlane.cpp				Sources)
+add_source (ZEPlane.h				Sources ZESDK)
+add_source (ZEQuaternion.cpp		Sources)
+add_source (ZEQuaternion.h			Sources ZESDK)
+add_source (ZERay.cpp				Sources)
+add_source (ZERay.h					Sources ZESDK)
+add_source (ZERectangle.cpp			Sources)
+add_source (ZERectangle.h			Sources ZESDK)
+add_source (ZERectangle3D.cpp		Sources)
+add_source (ZERectangle3D.h			Sources ZESDK)
+add_source (ZETriangle.cpp			Sources)
+add_source (ZETriangle.h			Sources ZESDK)
+add_source (ZETrigonometry.cpp		Sources)
+add_source (ZETrigonometry.h		Sources ZESDK)
+add_source (ZEVector.cpp			Sources)
+add_source (ZEVector.h				Sources ZESDK)
 
-add_source(ZEAABoundingBox.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEAABoundingBox.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEBoundingSphere.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEBoundingSphere.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDefinitions.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZELine.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZELine.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZELineSegment.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZELineSegment.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMatrix.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMatrix.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOBoundingBox.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEOBoundingBox.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPlane.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPlane.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEQuaternion.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEQuaternion.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERay.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERay.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERectangle.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERectangle.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERectangle3D.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZERectangle3D.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETriangle.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETriangle.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETrigonometry.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZETrigonometry.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVector.cpp ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEVector.h ZEMath_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_library (ZEMath ${Sources})
 
-add_library(ZEMath ${ZEMath_SOURCE_FILES})
-
-install(TARGETS ZEMath COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEMath)
+install (TARGETS ZEMath COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEMath)
