--- a/Source/ZEMeta/CMakeLists.txt
+++ b/Source/ZEMeta/CMakeLists.txt
@@ -36,24 +36,24 @@
 cmake_minimum_required(VERSION 2.8)
 
 
-add_source(ZEAnimation.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEAnimation.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEClass.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEClass.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEContainer.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEContainer.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEEvent.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEEvent.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMethod.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEMethod.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPostProcessor.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPostProcessor.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEProperty.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEProperty.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEProvider.cpp ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEProvider.h ZEMeta_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source(ZEAnimation.cpp		Sources)
+add_source(ZEAnimation.h		Sources ZESDK)
+add_source(ZEClass.cpp			Sources)
+add_source(ZEClass.h			Sources ZESDK)
+add_source(ZEContainer.cpp		Sources)
+add_source(ZEContainer.h		Sources ZESDK)
+add_source(ZEEvent.cpp			Sources)
+add_source(ZEEvent.h			Sources ZESDK)
+add_source(ZEMethod.cpp			Sources)
+add_source(ZEMethod.h			Sources ZESDK)
+add_source(ZEPostProcessor.cpp	Sources)
+add_source(ZEPostProcessor.h	Sources ZESDK)
+add_source(ZEProperty.cpp		Sources)
+add_source(ZEProperty.h			Sources ZESDK)
+add_source(ZEProvider.cpp		Sources)
+add_source(ZEProvider.h			Sources ZESDK)
 
-add_library(ZEMeta ${ZEMeta_SOURCE_FILES})
+add_library(ZEMeta ${Sources})
 
 install(TARGETS ZEMeta COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEMeta)
+install(FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEMeta)
