--- a/Source/ZEModel/CMakeLists.txt
+++ b/Source/ZEModel/CMakeLists.txt
@@ -33,27 +33,26 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEModel.cpp					Sources)
+add_source (ZEModel.h					Sources ZESDK)
+add_source (ZEModelAnimation.cpp		Sources)
+add_source (ZEModelAnimation.h			Sources ZESDK)
+add_source (ZEModelAnimationTrack.cpp	Sources)
+add_source (ZEModelAnimationTrack.h		Sources ZESDK)
+add_source (ZEModelBone.cpp				Sources)
+add_source (ZEModelBone.h				Sources ZESDK)
+add_source (ZEModelFileFormat.cpp		Sources)
+add_source (ZEModelFileFormat.h			Sources ZESDK)
+add_source (ZEModelMesh.cpp				Sources)
+add_source (ZEModelMesh.h				Sources ZESDK)
+add_source (ZEModelMeshLOD.cpp			Sources)
+add_source (ZEModelMeshLOD.h			Sources ZESDK)
+add_source (ZEModelResource.cpp			Sources)
+add_source (ZEModelResource.h			Sources ZESDK)
 
-add_source(ZEModel.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModel.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelAnimation.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelAnimation.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelAnimationTrack.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelAnimationTrack.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelBone.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelBone.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelFileFormat.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelFileFormat.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelMesh.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelMesh.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelMeshLOD.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelMeshLOD.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelResource.cpp ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEModelResource.h ZEModel_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_library (ZEModel ${Sources})
 
-add_library(ZEModel ${ZEModel_SOURCE_FILES})
-
-install(TARGETS ZEModel COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEModel)
+install (TARGETS ZEModel COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEModel)
