--- a/Source/ZEPhysics/CMakeLists.txt
+++ b/Source/ZEPhysics/CMakeLists.txt
@@ -33,32 +33,32 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-add_subdirectory(ZEPhysX)
+add_subdirectory (ZEPhysX)
 
-add_source(ZEPhysicalCallbacks.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalCallbacks.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalMaterial.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalMaterial.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalObject.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalObject.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalRigidBody.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalRigidBody.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalShapes.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalShapes.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalStaticMesh.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalStaticMesh.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalStaticRigidBody.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalStaticRigidBody.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalTrigger.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalTrigger.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalWorld.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicalWorld.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicsModule.cpp ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEPhysicsModule.h ZEPhysics_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source (ZEPhysicalCallbacks.cpp			Sources)
+add_source (ZEPhysicalCallbacks.h			Sources ZESDK)
+add_source (ZEPhysicalMaterial.cpp			Sources)
+add_source (ZEPhysicalMaterial.h			Sources ZESDK)
+add_source (ZEPhysicalObject.cpp			Sources)
+add_source (ZEPhysicalObject.h				Sources ZESDK)
+add_source (ZEPhysicalRigidBody.cpp			Sources)
+add_source (ZEPhysicalRigidBody.h			Sources ZESDK)
+add_source (ZEPhysicalShapes.cpp			Sources)
+add_source (ZEPhysicalShapes.h				Sources ZESDK)
+add_source (ZEPhysicalStaticMesh.cpp		Sources)
+add_source (ZEPhysicalStaticMesh.h			Sources ZESDK)
+add_source (ZEPhysicalStaticRigidBody.cpp	Sources)
+add_source (ZEPhysicalStaticRigidBody.h		Sources ZESDK)
+add_source (ZEPhysicalTrigger.cpp			Sources)
+add_source (ZEPhysicalTrigger.h				Sources ZESDK)
+add_source (ZEPhysicalWorld.cpp				Sources)
+add_source (ZEPhysicalWorld.h				Sources ZESDK)
+add_source (ZEPhysicsModule.cpp				Sources)
+add_source (ZEPhysicsModule.h				Sources ZESDK)
 
-add_library(ZEPhysics ${ZEPhysics_SOURCE_FILES})
+add_library (ZEPhysics ${Sources})
 
-install(TARGETS ZEPhysics COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEPhysics)
+install (TARGETS ZEPhysics COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEPhysics)
