--- a/Source/ZESound/CMakeLists.txt
+++ b/Source/ZESound/CMakeLists.txt
@@ -33,31 +33,31 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-add_subdirectory(ZEDirectSound)
-add_subdirectory(ZEOpenAL)
+add_subdirectory (ZEDirectSound)
+add_subdirectory (ZEOpenAL)
 
-add_source(ZEListener.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEListener.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundFX.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundModule.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundModule.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResource.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResource.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResourceMP3.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResourceMP3.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResourceOGG.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResourceOGG.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResourceWAV.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundResourceWAV.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundSource.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundSource.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundSource3D.cpp ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZESoundSource3D.h ZESound_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_source (ZEListener.cpp				Sources)
+add_source (ZEListener.h				Sources ZESDK)
+add_source (ZESoundFX.h					Sources ZESDK)
+add_source (ZESoundModule.cpp			Sources)
+add_source (ZESoundModule.h				Sources ZESDK)
+add_source (ZESoundResource.cpp			Sources)
+add_source (ZESoundResource.h			Sources ZESDK)
+add_source (ZESoundResourceMP3.cpp		Sources)
+add_source (ZESoundResourceMP3.h		Sources)
+add_source (ZESoundResourceOGG.cpp		Sources)
+add_source (ZESoundResourceOGG.h		Sources)
+add_source (ZESoundResourceWAV.cpp		Sources)
+add_source (ZESoundResourceWAV.h		Sources)
+add_source (ZESoundSource.cpp			Sources)
+add_source (ZESoundSource.h				Sources ZESDK)
+add_source (ZESoundSource3D.cpp			Sources)
+add_source (ZESoundSource3D.h			Sources ZESDK)
 
-add_library(ZESound ${ZESound_SOURCE_FILES})
-target_link_libraries(ZESound libvorbis.lib libvorbisfile.lib libogg.lib libmpg123.lib)
+add_library (ZESound ${Sources})
+target_link_libraries (ZESound libvorbis.lib libvorbisfile.lib libogg.lib libmpg123.lib)
 
-install(TARGETS ZESound COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZESound)
+install (TARGETS ZESound COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZESound)
