--- a/Source/ZESound/ZEDirectSound/CMakeLists.txt
+++ b/Source/ZESound/ZEDirectSound/CMakeLists.txt
@@ -33,21 +33,20 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEDSComponentBase.cpp		Sources)
+add_source (ZEDSComponentBase.h			Sources)
+add_source (ZEDSListener.cpp			Sources)
+add_source (ZEDSListener.h				Sources)
+add_source (ZEDSModule.cpp				Sources)
+add_source (ZEDSModule.h				Sources)
+add_source (ZEDSModuleDescription.cpp	Sources)
+add_source (ZEDSModuleDescription.h		Sources)
+add_source (ZEDSSoundSource.cpp			Sources)
+add_source (ZEDSSoundSource.h			Sources)
+add_source (ZEDSSoundSource3D.cpp		Sources)
+add_source (ZEDSSoundSource3D.h			Sources)
 
-add_source(ZEDSComponentBase.cpp ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSComponentBase.h ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSListener.cpp ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSListener.h ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSModule.cpp ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSModule.h ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSModuleDescription.cpp ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSModuleDescription.h ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSSoundSource.cpp ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSSoundSource.h ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSSoundSource3D.cpp ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEDSSoundSource3D.h ZEDirectSound_SOURCE_FILES INCLUDED_SDKS zesdk)
-
-add_library(ZEDirectSound ${ZEDirectSound_SOURCE_FILES})
-target_link_libraries(ZEDirectSound dsound.lib)
+add_library (ZEDirectSound ${Sources})
+target_link_libraries (ZEDirectSound dsound.lib)
