--- a/Source/ZEUI/CMakeLists.txt
+++ b/Source/ZEUI/CMakeLists.txt
@@ -33,27 +33,26 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
+add_source (ZEFontFile.cpp			Sources)
+add_source (ZEFontFile.h			Sources ZESDK)
+add_source (ZEFontResource.cpp		Sources)
+add_source (ZEFontResource.h		Sources ZESDK)
+add_source (ZEUIControl.cpp			Sources)
+add_source (ZEUIControl.h			Sources ZESDK)
+add_source (ZEUIEvents.cpp			Sources)
+add_source (ZEUIEvents.h			Sources ZESDK)
+add_source (ZEUIManager.cpp			Sources)
+add_source (ZEUIManager.h			Sources ZESDK)
+add_source (ZEUIRectangle.cpp		Sources)
+add_source (ZEUIRectangle.h			Sources ZESDK)
+add_source (ZEUIRenderer.cpp		Sources)
+add_source (ZEUIRenderer.h			Sources ZESDK)
+add_source (ZEUITextControl.cpp		Sources)
+add_source (ZEUITextControl.h		Sources ZESDK)
 
-add_source(ZEFontFile.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFontFile.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFontResource.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEFontResource.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIControl.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIControl.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIEvents.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIEvents.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIManager.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIManager.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIRectangle.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIRectangle.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIRenderer.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUIRenderer.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUITextControl.cpp ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZEUITextControl.h ZEUI_SOURCE_FILES INCLUDED_SDKS zesdk)
+add_library (ZEUI ${Sources})
 
-add_library(ZEUI ${ZEUI_SOURCE_FILES})
-
-install(TARGETS ZEUI COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install(FILES ${zesdk_INCLUDES}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Includes/ZEUI)
+install (TARGETS ZEUI COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
+install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEUI)
