--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -33,56 +33,56 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-#add_definitions(-DZE_DEBUG_D3D9_PERFHUD -DZE_DEBUG_D3D9_SHADERS)
+#add_definitions (-DZE_DEBUG_D3D9_PERFHUD -DZE_DEBUG_D3D9_SHADERS)
 
-add_subdirectory(ZED3D9PostProcessor)
+add_subdirectory (ZED3D9PostProcessor)
 
-add_source(ZED3D9Common.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Common.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9CommonTools.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9CommonTools.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ComponentBase.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ComponentBase.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9FixedMaterial.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9FixedMaterial.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9FrameRenderer.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9FrameRenderer.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9HDRProcessor.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9HDRProcessor.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Module.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Module.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ModuleDescription.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ModuleDescription.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Profiler.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Profiler.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Shader.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Shader.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ShaderManager.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ShaderManager.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ShadowRenderer.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ShadowRenderer.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9SimpleMaterial.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9SimpleMaterial.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9SkyBoxMaterial.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9SkyBoxMaterial.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9SSAOProcessor.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9SSAOProcessor.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Texture2D.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Texture2D.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Texture3D.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9Texture3D.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9TextureCube.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9TextureCube.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9UIMaterial.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9UIMaterial.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9VertexBuffer.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9VertexBuffer.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9VertexDeclaration.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9VertexDeclaration.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ViewPort.cpp ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-add_source(ZED3D9ViewPort.h ZEDirect3D9_SOURCE_FILES INCLUDED_SDKS zesdk)
-
-add_library(ZEDirect3D9 ${ZEDirect3D9_SOURCE_FILES})
-target_link_libraries(ZEDirect3D9 d3d9.lib d3dx9.lib)
+add_source (ZED3D9Common.cpp				Sources)
+add_source (ZED3D9Common.h					Sources)
+add_source (ZED3D9CommonTools.cpp			Sources)
+add_source (ZED3D9CommonTools.h				Sources)
+add_source (ZED3D9ComponentBase.cpp			Sources)
+add_source (ZED3D9ComponentBase.h			Sources)
+add_source (ZED3D9FixedMaterial.cpp			Sources)
+add_source (ZED3D9FixedMaterial.h			Sources)
+add_source (ZED3D9FrameRenderer.cpp			Sources)
+add_source (ZED3D9FrameRenderer.h			Sources)
+add_source (ZED3D9HDRProcessor.cpp			Sources)
+add_source (ZED3D9HDRProcessor.h			Sources)
+add_source (ZED3D9Module.cpp				Sources)
+add_source (ZED3D9Module.h					Sources)
+add_source (ZED3D9ModuleDescription.cpp		Sources)
+add_source (ZED3D9ModuleDescription.h		Sources)
+add_source (ZED3D9Profiler.cpp				Sources)
+add_source (ZED3D9Profiler.h				Sources)
+add_source (ZED3D9Shader.cpp				Sources)
+add_source (ZED3D9Shader.h					Sources)
+add_source (ZED3D9ShaderManager.cpp			Sources)
+add_source (ZED3D9ShaderManager.h			Sources)
+add_source (ZED3D9ShadowRenderer.cpp		Sources)
+add_source (ZED3D9ShadowRenderer.h			Sources)
+add_source (ZED3D9SimpleMaterial.cpp		Sources)
+add_source (ZED3D9SimpleMaterial.h			Sources)
+add_source (ZED3D9SkyBoxMaterial.cpp		Sources)
+add_source (ZED3D9SkyBoxMaterial.h			Sources)
+add_source (ZED3D9SSAOProcessor.cpp			Sources)
+add_source (ZED3D9SSAOProcessor.h			Sources)
+add_source (ZED3D9Texture2D.cpp				Sources)
+add_source (ZED3D9Texture2D.h				Sources)
+add_source (ZED3D9Texture3D.cpp				Sources)
+add_source (ZED3D9Texture3D.h				Sources)
+add_source (ZED3D9TextureCube.cpp			Sources)
+add_source (ZED3D9TextureCube.h				Sources)
+add_source (ZED3D9UIMaterial.cpp			Sources)
+add_source (ZED3D9UIMaterial.h				Sources)
+add_source (ZED3D9VertexBuffer.cpp			Sources)
+add_source (ZED3D9VertexBuffer.h			Sources)
+add_source (ZED3D9VertexDeclaration.cpp		Sources)
+add_source (ZED3D9VertexDeclaration.h		Sources)
+add_source (ZED3D9ViewPort.cpp				Sources)
+add_source (ZED3D9ViewPort.h				Sources)
+ 
+add_library (ZEDirect3D9 ${Sources})
+target_link_libraries (ZEDirect3D9 d3d9.lib d3dx9.lib)
